# budlum

./: .gitleaks.toml  ARENA_AI.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SPECIFICATION.md  buf.yaml  build.rs  ci.yml  deny.toml  devnet.sh  docker-compose.yml  flake.nix  run_nodes.sh  rustfmt.toml
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  coverage-badge.json  dependabot.yml
B.U.D/: Cargo.toml  README.md
B.U.D/src/: content_id.rs  deals.rs  lib.rs  manifest.rs
B.U.D/tests/: bud_e2e.rs
BNS/: Cargo.toml  README.md
BNS/src/: lib.rs  registry.rs  types.rs
BNS/tests/: bns.rs  bns_expanded.rs
benches/: domain_throughput.rs
budlum-primitives/: Cargo.toml
budzero/: CLAUDE.md  README.md  deny.toml
config/: archive.toml  devnet.toml  mainnet-genesis.json  mainnet.toml  testnet.toml
docs/: 01_multi_consensus_settlement.md  03_paradigma_analizi.md  03_post_quantum_security.md  ADIM3_FINAL_KAPANIS_ARENA3.md  ADIM3_PLAN_VE_GOREV_DAGILIMI.md  ADIM5_ARENA6_DENETIM_2026-07-15.md  ADIM7_CEREMONY_BIRLESTIRME_ARENA5_ARENA1.md  ADIM7_CEREMONY_PLAN.md  AGENT4_5_6_ARENA3_DENETIM_RAPORU.md  AGENT4_5_6_DENETIM_ARENA2.md  AGENT_AUDIT_REPORT.md  AI_BIRLIGI.md  AI_ONBOARDING.md  ARCHITECTURE.md  ARENA2_P1R0_ACCESSGRANT_TASARIM_2026-07-18.md  ARENA3_BACKLOG_2026-07-18.md  ARENA3_MIMARI_KULLANILABILIRLIK_RAPORU_2026-07-22.md  ARENA3_TALIMAT_BUDL_LANGUAGE.md  ARENA4_APPROVED_SYSTEMS_ROADMAP_2026-07-20.md  AUDIT_CHECKLIST.md  BENCH_BASELINE.md  BUDLUM_BOS_KOD_BAGDASMAMA_DENETIM_ARENA3_2026-07-16.md  BUDLUM_CONSTITUTION.md  BUDLUM_HARDENING_PROTOCOL.md  BUDLUM_PRE_MORTEM_SECURITY_AUDIT.md  BUDLUM_SUREKLI_DENETIM_ARENA3_2026-07-15.md  BUDZKVM_TRACE_LAYOUT.md  BUD_INTERIM.md  BUD_STORAGE_TECHNICAL_SPEC.md  BUG_BOUNTY.md  D2_GIZLILIK_OPCODE_TASARIM_2026-07-22.md  D3_LEGACY_PROOF_KALDIRMA_PLAN_2026-07-22.md  DEVELOPER_OS_BUDL_SDK.md  DEVIR_RAPORU.md  DOMAIN_FORK_CHOICE_SPEC.md  EIP1559_FEE_MARKET_SPEC.md  GENESIS_REWARD_POOL_SPEC.md  GIZLILIK_KATMANI_ZKVM_TALIMATI.md  GOVERNANCE.md  KALAN_ISLER.md  (+45 more)
examples/: print_genesis_hash.rs
explorer/: README.md  index.html
fuzz/: Cargo.toml  README.md
fuzz/corpus/relayer_escrow/: seed1
fuzz/fuzz_targets/: block_deserialize.rs  consensus_state_transition.rs  consensus_validate.rs  fuzz_blockchain_serialize.rs  relayer_escrow.rs  reputation.rs  snapshot_deserialize.rs  transaction_deserialize.rs  zk_verifier.rs
ops/: budlum-core.service  prometheus.yml
scripts/: adim3_smoke_rpc.sh  anket_expand_apply.py  anket_expand_p1.py  anket_expand_p2.py  audit-deps.sh  check-actionlint.sh  check-audit-prep-gate.sh  check-bns-gate.sh  check-clippy-extra.sh  check-coverage.sh  check-economy-invariants.sh  check-fork-choice-gate.sh  check-geiger.sh  check-governance-invariants.sh  check-network-hardening-gate.sh  check-node-classification-gate.sh  check-poa-compliance-gate.sh  check-spec-coverage.sh  check-storage-proof-production-boundary.sh  check-storage-provider-gate.sh  check-timing-safe.sh  check-udeps.sh  check-wallet-core-gate.sh  check-zizmor.sh  check_genesis_schema.py  coverage-report.sh  (+6 more)
(+377 files in other folders)
