# Budlum monorepo workspace (konsolidasyon 2026-07-22).
# budlumCore = essential ağ crate'i (standalone). B.U.D. = opsiyonel eklenti.
# budZero = ayrı ZKVM sub-workspace (kendi Cargo.toml'u) → exclude.
[workspace]
resolver = "2"
members = ["budlumCore", "B.U.D."]
exclude = ["budZero", "wallet-core", "fuzz"]
