[package]
name = "budlum-bns"
version = "0.1.0"
edition = "2021"
rust-version = "1.94.0"
license = "MIT"
publish = false

[dependencies]
budlum-primitives = { path = "../budlum-primitives" }
budlum-bud = { path = "../B.U.D" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
budlum-bud = { path = "../B.U.D" }
