[package]
name = "budlum-fuzz"
version = "0.0.0"
edition = "2021"
rust-version = "1.94.0"
publish = false

# cargo-fuzz >= 0.13, fuzz crate manifestlerini bu metadata ile doğrular.
# Eksikse `cargo fuzz run` anında çıkar:
#   "manifest .../fuzz/Cargo.toml does not look like a cargo-fuzz manifest"
# (main CI run #728 kanıtı). Bu satır kapının çalışması için ZORUNLUDUR.
[package.metadata]
cargo-fuzz = true

# Fuzz harness'leri. CI'da uzun fuzz run çalıştırılmaz; Phase 2 §1.7 sadece
# setup/build edilebilir target setini teslim eder.
# Manuel run: `cargo +nightly fuzz run <target>`.

[dependencies]
bincode = "1.3"
budlum-core = { path = ".." }
libfuzzer-sys = "0.4"

[[bin]]
name = "block_deserialize"
path = "fuzz_targets/block_deserialize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "consensus_validate"
path = "fuzz_targets/consensus_validate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_blockchain_serialize"
path = "fuzz_targets/fuzz_blockchain_serialize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "snapshot_deserialize"
path = "fuzz_targets/snapshot_deserialize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "transaction_deserialize"
path = "fuzz_targets/transaction_deserialize.rs"
test = false
doc = false
bench = false
